--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Lernantino</h1>
-        <nav class="navbar">
+        <nav>
             <ul>
                 <li>
                     <a href="#About">About Me</a>
@@ -45,44 +45,49 @@
         <section class="right-side">
             <div class="paragraphs">
                 <div class="paragragh1">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem quisquam asperiores. Illum voluptate iusto consectetur repudiandae doloremque esse laborum perspiciatis nisi? Eligendi nobis repellendus eaque eius, debitis dolore quibusdam iusto error esse ipsum voluptate facilis ducimus soluta.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem quisquam asperiores. Illum voluptate iusto consectetur repudiandae doloremque esse laborum perspiciatis nisi? Eligendi nobis repellendus eaque eius, debitis dolore quibusdam iusto error esse ipsum voluptate facilis ducimus soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
                 </div>
                 <br>
                 <div class="paragraph2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt provident voluptates, recusandae illo adipisci maxime esse sit numquam quas ut aliquam voluptatem iure, vitae ex neque enim impedit, eaque mollitia optio similique vero et delectus est eos! Amet numquam quisquam quibusdam provident sed inventore voluptatum repellendus. Sequi placeat error provident cumque vitae est officia, ullam quasi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt provident voluptates, recusandae illo adipisci maxime esse sit numquam quas ut aliquam voluptatem iure, vitae ex neque enim impedit, eaque mollitia optio similique vero et delectus est eos! Amet numquam quisquam quibusdam provident sed inventore voluptatum repellendus. Sequi placeat error provident cumque vitae est officia, ullam quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
 
-            <div class="projects">
+            
                 <figure class="surf">
                     <img src="Images/surfreport.jpg" alt="Surf Report" class="surf-image">
-                    <h3>Surf Report</h3>
-                    <p>MERN Stack</p>
+                        <h3>Surf Report</h3>
+                        <p>MERN Stack</p>
+                </figure>
+                
+            <div class="small-projects">
+                <figure class="LED">
+                    <img src="Images/LEDWALL.jpg" alt="LED Wall" class="LED-image">
+                        <h3>LED Wall</h3>
+                        <p>Node/IoT</p>
                 </figure>
 
-                <div class="project-LED">
-                    <img src="Images/LEDWALL.jpg" alt="LED Wall" class="LED-Wall">
-                    <div class="subtitle-LED">LED Wall<p>Node/IoT</p></div>
-                </div>
+                <figure class="calculator">
+                    <img src="Images/calculator.jpg" alt="Calculator" class="calculator-image">
+                        <h3>Calculator</h3>
+                        <p>React/Javascript/CSS</p>
+                </figure>
 
-                <div class="project-calculator">
-                    <img src="Images/calculator.jpg" alt="Calculator" class="calculator">
-                    <div class="subtitle-calculator">Calculator<p>React/Javascript/CSS</p></div>
-                </div>
+                <figure class="puzzle">
+                    <img src="Images/puzzles.jpg" alt="Puzzle" class="puzzle-image">
+                        <h3>Pastel Puzzles</h3>
+                        <p>MERN Stack</p>
+                </figure>
 
-                <div class="project-puzzles">
-                    <img src="Images/puzzles.jpg" alt="Puzzle" class="puzzle">
-                    <div class="subtitle-puzzles">Pastel Puzzles<p>MERN Stack</p></div>
-                </div>
-
-                <div class="project-run">
-                    <img src="Images/run.jpg" alt="Run Buddy" class="run-buddy">
-                    <div class="subtitle-run">Run Buddy<p>HTML/CSS</p></div>
-                </div>
+                <figure class="run">
+                    <img src="Images/run.jpg" alt="Run Buddy" class="run-image">
+                        <h3>Run Buddy</h3>
+                        <p>HTML/CSS</p>
+                </figure>
             </div>
             <br>
             <div class="contact-info">
-                <div class="phone-number">919.691.4559</div>
+                <div class="phone-number">555.555.5555</div>
                 <div class="email">dchpeterman@gmail.com</div>
                 <div class="github">GitHub</div>
                 <div class="twitter">Twitter</div>
