Complete w/out Responsiveness

--- a/index.html
+++ b/index.html
@@ -37,23 +37,22 @@
 
     <main>
         <section class="left-side">
-            <div class="about">About Me</div>
-            <div class="work">Work</div>
-            <div class="contact">Contact Me</div>
+            <div class="about" id="About">About Me</div>
+            <div class="work" id="Work">Work</div>
+            <div class="contact" id="Contact">Contact Me</div>
         </section>
 
         <section class="right-side">
             <div class="paragraphs">
                 <div class="paragragh1">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem quisquam asperiores. Illum voluptate iusto consectetur repudiandae doloremque esse laborum perspiciatis nisi? Eligendi nobis repellendus eaque eius, debitis dolore quibusdam iusto error esse ipsum voluptate facilis ducimus soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem quisquam asperiores. Illum voluptate iusto consectetur repudiandae doloremque esse laborum perspiciatis nisi? Eligendi nobis repellendus eaque eius, debitis dolore quibusdam iusto error esse ipsum voluptate facilis ducimus soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, molestias.</p>
                 </div>
                 <br>
                 <div class="paragraph2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt provident voluptates, recusandae illo adipisci maxime esse sit numquam quas ut aliquam voluptatem iure, vitae ex neque enim impedit, eaque mollitia optio similique vero et delectus est eos! Amet numquam quisquam quibusdam provident sed inventore voluptatum repellendus. Sequi placeat error provident cumque vitae est officia, ullam quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt provident voluptates, recusandae illo adipisci maxime esse sit numquam quas ut aliquam voluptatem iure, vitae ex neque enim impedit, eaque mollitia optio similique vero et delectus est eos! Amet numquam quisquam quibusdam provident sed inventore voluptatum repellendus. Sequi placeat error provident cumque vitae est officia, ullam quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quod! Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </div>
             </div>
 
-            
                 <figure class="surf">
                     <img src="Images/surfreport.jpg" alt="Surf Report" class="surf-image">
                         <h3>Surf Report</h3>
@@ -85,6 +84,7 @@
                         <p>HTML/CSS</p>
                 </figure>
             </div>
+            <br>
             <br>
             <div class="contact-info">
                 <div class="phone-number">555.555.5555</div>
