--- a/index.html
+++ b/index.html
@@ -56,33 +56,28 @@
 
                 <figure class="surf">
                     <img src="Images/surfreport.jpg" alt="Surf Report" class="surf-image">
-                        <h3>Surf Report</h3>
-                        <p>MERN Stack</p>
+                        <h3>Project 1</h3>
                 </figure>
                 
             <div class="small-projects">
                 <figure class="LED">
                     <img src="Images/LEDWALL.jpg" alt="LED Wall" class="LED-image">
-                        <h3>LED Wall</h3>
-                        <p>Node/IoT</p>
+                        <h3>Project 2</h3>
                 </figure>
 
                 <figure class="calculator">
                     <img src="Images/calculator.jpg" alt="Calculator" class="calculator-image">
-                        <h3>Calculator</h3>
-                        <p>React/Javascript/CSS</p>
+                        <h3>Project 3</h3>
                 </figure>
 
                 <figure class="puzzle">
                     <img src="Images/puzzles.jpg" alt="Puzzle" class="puzzle-image">
-                        <h3>Pastel Puzzles</h3>
-                        <p>MERN Stack</p>
+                        <h3>Project 4</h3>
                 </figure>
 
                 <figure class="run">
                     <img src="Images/run.jpg" alt="Run Buddy" class="run-image">
-                        <h3>Run Buddy</h3>
-                        <p>HTML/CSS</p>
+                        <h3>Project 5</h3>
                 </figure>
             </div>
             <br>
