--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Lernantino</h1>
+        <h1>Daniel Peterman</h1>
         <nav>
             <ul>
                 <li>
